# dbot

./: .dockerignore  .env.ci  .env.example  .gitignore  Dockerfile  LICENSE.txt  Makefile  PAYLOADS.md  config.example.json  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: deploy.yml  main.yml
app/: Dockerfile  abstract.py  checker.py  config.py  dao.py  dscrd.py  logs.py  main.py  models.py  monitoring.py  pyproject.toml  repository.py  requirements.txt  sender.py  serializers.py  services.py
app/channel_config/: loader.py
app/config/: __init__.py  base.py  environ.py
app/connectors/: transport.py  webhooks.py
app/model/: __init__.py  channel.py  config.py  notifications.py  user.py
app/tests/: test_repository.py  test_serializers.py  test_services.py
app/tests/model/: test_channel.py
app/tests/unit/: test_repository.py  test_services.py
app/tests/unit/model/: test_channel.py
helm/dbot/: Chart.yaml  config.json  deployment.yaml  values.yaml
helm/dbot/templates/: _helpers.tpl  app_configmap.yaml  deployment.yaml
helm/redis/: service.yml
kubernetes/dbot/: app_configmap.yaml
kubernetes/redis/: deployment.yml
src/dbot/: config.py  dscrd.py  logs.py  main.py  monitoring.py  repository.py  services.py
src/dbot/channel_config/: loader.py  new_loader.py
src/dbot/config_loader/: loader.py
src/dbot/connectors/: abstract.py  router.py  transport.py  webhooks.py
src/dbot/connectors/rqueue/: connector.py
src/dbot/connectors/webhooks/: transport.py  webhooks.py
src/dbot/dscrd/: abstract.py  client.py
src/dbot/infrastructure/: config.py  logs.py  monitoring.py
src/dbot/model/: __init__.py  channel.py  config.py  notifications.py
tests/integration/clients/: wiremock.py
tests/integration/src/dbot/: test_repository.py
tests/integration/src/dbot/connectors/rqueue/: test_connector.py
tests/integration/src/dbot/connectors/webhooks/: test_webhooks.py
tests/unit/: test_repository.py  test_services.py
tests/unit/connectors/rqueue/: test_connector.py
tests/unit/src/dbot/: test_repository.py  test_services.py
tests/unit/src/dbot/channel_config/: test_new_loader.py
tests/unit/src/dbot/config_loader/: test_loader.py
tests/unit/src/dbot/connectors/: test_router.py
tests/unit/src/dbot/connectors/rqueue/: test_connector.py
tests/unit/src/dbot/connectors/webhooks/: test_webhooks.py
tests/unit/src/dbot/model/: test_channel.py
values/: local.env.example
