[tool.poetry]
name = "discord-activity-bot"
version = "1.1.0"
description = ""
authors = ["Alexei Stoliarov <alexei.stoliarov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^2.0.1"
"discord.py" = {extras = ["voice"], version = "^1.7.3"}
Jinja2 = "^3.1.2"
environs = "^9.5.0"
sentry-sdk = "^1.5.10"
pydantic = "^1.10.2"
structlog = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
